<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ImWON!</string>
    <string name="app_name">ImUtils</string>
    <string name="list">list</string>
    <string name="add">add</string>
    <string name="weather">weather search</string>
    <string name="statistics">statistics</string>
    <string name="dinner">dinner</string>
    <string name="schedule">schedule</string>
    <string name="spinner_prompt_text">시간 지정</string>
    <string name="scheduleButtonText">준비중입니다.</string>
    <string name="scheduleTimeText">예약 시간을 지정해주세요.</string>
    <string name="nameText">Name 정보 입력</string>
    <string name="macText">MAC Address 정보 입력</string>
    <string name="ipText">IP Address 정보 입력</string>
    <string name="portText">Port 정보 입력</string>
    <string name="searchButtonDesc">미세 먼지 농도 검색</string>

    <string name="nameHintText">회사컴퓨터</string>
    <string name="macHintText">00-E0-91-32-14-EF</string>
    <string name="ipHintText">112.169.59.33</string>
    <string name="portHintText">3389</string>

    <string name="tabIdList">list</string>
    <string name="tabIdAdd">add</string>
    <string name="tabStatistics">statistics</string>
    <string name="tabIdSchedule">schedule</string>
    <string name="tabIdWeather">weather</string>
    <string name="tabIdDinner">dinner</string>

    <string name="insertFail">저장 실패하였습니다.</string>
    <string name="insertSuccess">저장하였습니다.</string>
    <string name="deleteFail">삭제 실패하였습니다.</string>
    <string name="deleteSuccess">삭제하였습니다.</string>
    <string name="nameIsEmpty">Name 정보를 입력하십시오.</string>
    <string name="macAddressIsEmpty">MAC Address 정보를 입력하십시오.</string>
    <string name="ipAddressIsEmpty">IP Address 정보를 입력하십시오.</string>
    <string name="portIsEmpty">Port 정보를 입력하십시오.</string>
    <string name="packetSendFailure">패킷 전송 실패하였습니다.</string>
    <string name="packetSendSuccess">컴퓨터야 일어나라~~</string>

    <string name="update">수정</string>
    <string name="delete">삭제</string>
    <string name="info">정보</string>

    <string name="information">안녕하세요 I am Utils 어플리케이션 개발자 이남규입니다.
        <br/>회사 생활을 하면서 필요한 유틸들을 모았습니다.
	</string>
</resources>
